Rework: docs, meta, test, variables
- Add: docs
- Add: meta files
- Add: new tests
- Add: update-meta-files.sh
- Update: Variables renamed
- Update: LICENSE
- Update: README.md format and content
- Remove: empty requirements.yml
- Remove: old tests

- Resolves: #1

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-utr_api_key: ''
-utr_monitor_id: []
-utr_monitor_state: ''
-utr_flush_handlers: 'true'
+wtd_utr_api_key: ''
+wtd_utr_monitor_id: []
+wtd_utr_monitor_state: ''
+# You can set this to false, if you are using pre_task/post_task in your play.
+wtd_utr_flush_handlers: 'true'
