--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - ansible --version
 
   # Link github repo to ansible-galaxy name
-  - ln -s  $PWD ../while-true-do.uptimerobot
+  - ln -s  $PWD ../while_true_do.uptimerobot
 
 # Run the tests
 script:
