--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 dependencies: []
 
 galaxy_info:
+  role_name: uptimerobot
   author: while-true-do.org
   description: A very simple role to pause and start uptimerobot monitors.
   company: while-true-do.org
